Milestone one: added relevant text, photos and played with the modal

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#milestonesModal0">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div><img class="img-fluid" src="assets/img/milestones/Milestone-1.jpg" alt="Log Cabin"/>
+                            </div><img class="img-fluid" src="assets/img/milestones/Milestone-1.jpg" alt="M1"/>
                         </div>
                     </div>
 
@@ -119,7 +119,7 @@
                 <div class="modal-content">
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
                     <div class="modal-body text-center">
-                        <div class="container">
+                        <div class="container-fluid">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Milestone Modal - Title-->
@@ -130,14 +130,87 @@
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Milestone Modal - Image--><img class="img-fluid rounded mb-5 w-50 h-50" src="assets/img/milestones/Milestone-1.jpg" alt="Log Cabin"/>
+                                    <!-- Milestone Modal - Image--><img class="img-fluid rounded mb-5 w-50 h-50" src="assets/img/milestones/Milestone-1.jpg" alt="M1"/>
                                     <!-- Milestone Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
+
+                                </div>
+                                <div class="row justify-content-center">
+
+                                    <div class="col-lg-6 ml-auto">
+                                        <h5 class="text-secondary mb-1 d-inline-block">The Problem</h5>
+                                        <div class="divider-custom">
+                                            <div class="divider-custom-line"></div>
+                                        </div>
+                                        <p class="mb-5 pre-wrap lead">The specific problem right now is the unavailability of one source of truth for rescued animals in need of a home. Aditionally, there is not an easy method to look for good services or reviews about them when talking about pet owners.</p>
+                                    </div>
+
+                                    <div class="col-lg-6 mr-auto">
+                                        <h5 class="text-secondary mb-1 d-inline-block">Value Proposition</h5>
+                                        <div class="divider-custom">
+                                            <div class="divider-custom-line"></div>
+                                        </div>
+                                        <p class="mb-5 pre-wrap lead">A place where all pet services coexist in a proactive environment driven by pet owners. A platform where pet sitters and veterinarians can offer their services and be reviewed by the community.</p>
+                                    </div>
+
+                                </div>
+                                <div class="row justify-content-center">
+
+                                    <div class="col-lg-6 ml-auto">
+
+                                        <h5 class="text-secondary mb-1 d-inline-block">Customer Segment</h5>
+                                        <div class="divider-custom">
+                                            <div class="divider-custom-line"></div>
+                                        </div>
+                                        <p class="mb-5 pre-wrap lead">Our customer base will consist of prospective pet adopters looking to connect with the pet a little more personally than a random forum announcement allows.</p>
+                                    </div>
+
+                                    <div class="col-lg-6 mr-auto">
+
+                                        <h5 class="text-secondary mb-1 d-inline-block">Competition</h5>
+                                        <div class="divider-custom">
+                                            <div class="divider-custom-line"></div>
+                                        </div>
+                                        <p class="mb-5 pre-wrap lead">There is no cohesive platform for pet caring in Romania right now so our competition is quite disparate: OLX, social media adoption groups and individual sites (such as animalutul.ro, adoptii-animale-hope.org and others). Our main advantage is that we wil provide dedicated adoption place to centralize all of the posts on those platforms.
+                                        </p>
+                                    </div>
+
+                                </div>
+                                <div class="row justify-content-center">
+
+                                    <div class="col-lg-6 ml-auto">
+
+                                        <h5 class="text-secondary mb-1 d-inline-block">Key Metrics</h5>
+                                        <div class="divider-custom">
+                                            <div class="divider-custom-line"></div>
+                                        </div>
+                                        <p class="mb-5 pre-wrap lead">As our main goal is to help our users help pets in need, we believe our main metric needs to be the adoption ratio (number of adoptions / number of users; since we aim for every user that uses our services to land an adoption, our target is for this metric to be as close to 1 as possible).</p>
+                                    </div>
+
+                                    <div class="col-lg-6 mr-auto">
+
+                                        <h5 class="text-secondary mb-1 d-inline-block">Cost Structure</h5>
+                                        <div class="divider-custom">
+                                            <div class="divider-custom-line"></div>
+                                        </div>
+                                        <p class="mb-5 pre-wrap lead">For the initial deployment the fixed costs are represented by the domain name and marketing. For varibale costs we have the cloud services necessary for the platform that will scale up with the number of users.</p>
+                                    </div>
+                                </div>
+                                <div class="row justify-content-center">
+
+                                    <div class="col-lg-6">
+
+                                        <h5 class="text-secondary mb-1 d-inline-block">Revenue Streams</h5>
+                                        <div class="divider-custom">
+                                            <div class="divider-custom-line"></div>
+                                        </div>
+                                        <p class="mb-5 pre-wrap lead">We target a revenue driven by ads, but we also consider doing partnerships with trusted pet shops and vets that will be promoted in the app.</p>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -160,12 +233,12 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- About Section Content-->
-                <div class="row">
+                <div class="row justify-content-center">
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+                        <p class="pre-wrap lead">A place where all pet services coexist in a proactive environment driven by pet owners.</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
-                        <p class="pre-wrap lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+                        <p class="pre-wrap lead">A platform where pet sitters and veterinarians can offer their services and be reviewed by the community.</p>
                     </div>
                 </div>
             </div>
@@ -193,32 +266,32 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-4">
                         <div class="d-flex flex-column align-items-center">
-                            <div class="w-25 h-25 mb-1"><img class="rounded-circle img-fluid mb-3" src="assets/img/bear-1.svg" alt=""></div>
-                            <div class="text-muted">Project Owner</div><a class="lead font-weight-bold" href="mailto:name@example.com">Tudor Manea</a>
+                            <div class="w-25 h-25 mb-1"><img class="rounded-circle img-fluid mb-3" src="assets/img/contact-photos/tudor.jpg" alt=""></div>
+                            <div class="text-muted">Project Owner</div><a class="lead font-weight-bold" href="mailto:tudor.stefan.manea@gmail.com">Tudor Manea</a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="d-flex flex-column align-items-center">
-                            <div class="w-25 h-25 mb-3"><img class="rounded-circle img-fluid mb-3" src="assets/img/bear-1.svg" alt=""></div>
-                            <div class="text-muted">Project Manager</div><a class="lead font-weight-bold" href="mailto:name@example.com">Horia Velciu</a>
+                            <div class="w-25 h-25 mb-3"><img class="rounded-circle img-fluid mb-3" src="assets/img/contact-photos/horia.jpg" alt=""></div>
+                            <div class="text-muted">Project Manager</div><a class="lead font-weight-bold" href="mailto:horia.velciu@gmail.com">Horia Velciu</a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="d-flex flex-column align-items-center">
-                            <div class="w-25 h-25 mb-3"><img class="rounded-circle img-fluid mb-3" src="assets/img/bear-1.svg" alt=""></div>
-                            <div class="text-muted">Infrastructure Engineer</div><a class="lead font-weight-bold" href="mailto:name@example.com">Vlad Ivan</a>
+                            <div class="w-25 h-25 mb-3"><img class="rounded-circle img-fluid mb-3" src="assets/img/contact-photos/vladivan.jpg" alt=""></div>
+                            <div class="text-muted">Infrastructure Engineer</div><a class="lead font-weight-bold" href="mailto:vlad77ivan@gmail.com">Vlad Ivan</a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="d-flex flex-column align-items-center">
-                            <div class="w-25 h-25 mb-3"><img class="rounded-circle img-fluid mb-3" src="assets/img/bear-1.svg" alt=""></div>
-                            <div class="text-muted">Backend Engineer</div><a class="lead font-weight-bold" href="mailto:name@example.com">Alexandru Selea</a>
+                            <div class="w-25 h-25 mb-3"><img class="rounded-circle img-fluid mb-3" src="assets/img/contact-photos/selea.jpg" alt=""></div>
+                            <div class="text-muted">Backend Engineer</div><a class="lead font-weight-bold" href="mailto:alexselea@gmail.com">Alexandru Selea</a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="d-flex flex-column align-items-center">
-                            <div class="w-25 h-25 mb-3"><img class="rounded-circle img-fluid mb-3" src="assets/img/bear-1.svg" alt=""></div>
-                            <div class="text-muted">Frontend Engineer</div><a class="lead font-weight-bold" href="mailto:name@example.com">Serban Ciofu</a>
+                            <div class="w-25 h-25 mb-3"><img class="rounded-circle img-fluid mb-3" src="assets/img/contact-photos/ciofu.jpg" alt=""></div>
+                            <div class="text-muted">Frontend Engineer</div><a class="lead font-weight-bold" href="mailto:sciofu@gmail.com">Serban Ciofu</a>
                         </div>
                     </div>
                 </div>
@@ -231,27 +304,30 @@
          === FOOTER === 
 
          -->
+<!--          
         <footer class="footer text-center">
             <div class="container">
                 <div class="row">
-                    <!-- Footer Location-->
+
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="mb-4">LOCATION</h4>
                         <p class="pre-wrap lead mb-0">2215 John Daniel Drive
 Clark, MO 65243</p>
                     </div>
-                    <!-- Footer Social Icons-->
+
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="mb-4">AROUND THE WEB</h4><a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/StartBootstrap"><i class="fab fa-fw fa-facebook-f"></i></a><a class="btn btn-outline-light btn-social mx-1" href="https://www.twitter.com/sbootstrap"><i class="fab fa-fw fa-twitter"></i></a><a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/startbootstrap"><i class="fab fa-fw fa-linkedin-in"></i></a><a class="btn btn-outline-light btn-social mx-1" href="https://www.dribble.com/startbootstrap"><i class="fab fa-fw fa-dribbble"></i></a>
                     </div>
-                    <!-- Footer About Text-->
+
                     <div class="col-lg-4">
                         <h4 class="mb-4">ABOUT FREELANCER</h4>
                         <p class="pre-wrap lead mb-0">Freelance is a free to use, MIT licensed Bootstrap theme created by Start Bootstrap</p>
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer> -->
+
+
         <!-- Copyright Section-->
         <section class="copyright py-4 text-center text-white">
             <div class="container"><small class="pre-wrap">Copyright © Your Website 2020</small></div>
