Added icons to the M0 subtitles

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                                 <div class="row justify-content-center">
 
                                     <div class="col-lg-6 ml-auto">
+                                        <i class="mr-1 fas fa-exclamation-circle fa-lg"></i>
                                         <h5 class="text-secondary mb-1 d-inline-block">The Problem</h5>
                                         <div class="divider-custom">
                                             <div class="divider-custom-line"></div>
@@ -145,6 +146,7 @@
                                     </div>
 
                                     <div class="col-lg-6 mr-auto">
+                                        <i class="mr-1 fas fa-lightbulb fa-lg"></i>
                                         <h5 class="text-secondary mb-1 d-inline-block">Value Proposition</h5>
                                         <div class="divider-custom">
                                             <div class="divider-custom-line"></div>
@@ -156,7 +158,7 @@
                                 <div class="row justify-content-center">
 
                                     <div class="col-lg-6 ml-auto">
-
+                                        <i class="mr-1 fas fa-users fa-lg"></i>
                                         <h5 class="text-secondary mb-1 d-inline-block">Customer Segment</h5>
                                         <div class="divider-custom">
                                             <div class="divider-custom-line"></div>
@@ -165,7 +167,7 @@
                                     </div>
 
                                     <div class="col-lg-6 mr-auto">
-
+                                        <i class="mr-1 fas fa-briefcase fa-lg"></i>
                                         <h5 class="text-secondary mb-1 d-inline-block">Competition</h5>
                                         <div class="divider-custom">
                                             <div class="divider-custom-line"></div>
@@ -178,7 +180,7 @@
                                 <div class="row justify-content-center">
 
                                     <div class="col-lg-6 ml-auto">
-
+                                        <i class="mr-1 fas fa-weight fa-lg"></i>
                                         <h5 class="text-secondary mb-1 d-inline-block">Key Metrics</h5>
                                         <div class="divider-custom">
                                             <div class="divider-custom-line"></div>
@@ -187,7 +189,7 @@
                                     </div>
 
                                     <div class="col-lg-6 mr-auto">
-
+                                        <i class="mr-1 fas fa-money-bill-wave fa-lg"></i>
                                         <h5 class="text-secondary mb-1 d-inline-block">Cost Structure</h5>
                                         <div class="divider-custom">
                                             <div class="divider-custom-line"></div>
@@ -198,7 +200,7 @@
                                 <div class="row justify-content-center">
 
                                     <div class="col-lg-6">
-
+                                        <i class="mr-1 fas fa-hand-holding-usd fa-lg"></i>
                                         <h5 class="text-secondary mb-1 d-inline-block">Revenue Streams</h5>
                                         <div class="divider-custom">
                                             <div class="divider-custom-line"></div>
