Fixed last section of milestone 2

--- a/index.html
+++ b/index.html
@@ -368,14 +368,15 @@
                                         </div>
                                         <p class="mb-5 pre-wrap lead">We discovered that pet adoption and ownership is influenced by friends and acquaitances. Therefore our app needs to be socially driven network where you cand see pets from animal shelters, stray pets from friends, connect with friends and see from where they adopted.</p>
                                         <p class="mb-5 pre-wrap lead">An inside blog with topics such as nutrition, cosmetics and competitions should also be present, as those are of interest to owners.</p>
+                                        <p class="mb-5 pre-wrap lead">Profiles with reviews for vets, tamers and pet hotels, with a dedicated map to see those available nearby because we discovered that people value a lot places close to their home.</p>
                                     </div>
 
                                     <div class="col-lg-6 mr-auto">
                                         <i class="mr-1 far fa-star fa-lg"></i>
+                                        <h5 class="text-secondary mb-1 d-inline-block">Are we ready for Customer Validation</h5>
                                         <div class="divider-custom">
                                             <div class="divider-custom-line"></div>
                                         </div>
-                                        <p class="mb-5 pre-wrap lead">Profiles with reviews for vets, tamers and pet hotels, with a dedicated map to see those available nearby because we discovered that people value a lot places close to their home.</p>
                                         <p class="mb-5 pre-wrap lead">We have our features stated above so we are ready to continue with the design of the app and how we will have them integrated.</p>
                                     </div>
 
