update style for some descriptions

--- a/index.html
+++ b/index.html
@@ -578,15 +578,11 @@
                                 </div>
 
                                 <div class="row justify-content-center">
-                                
-                                    <div class="col-lg-6">
                                         <h5 class="text-secondary mb-1 d-inline-block">Interview Scripts</h5>
                                         <div class="divider-custom">
                                             <div class="divider-custom-line"></div>
                                         </div>
-                                        <p class="mb-5 lead">Below are the transcripts of the 3 most relevant discussions we've had.</p>
-                                    </div>
-
+                                        <p class="mb-5 pre-wrap lead">Below are the transcripts of the 3 most relevant discussions we've had.</p>
                                 </div>
 
                                 <div class="row justify-content-center">
@@ -764,13 +760,11 @@
                                 </div>
                                 
                                 <div class="row justify-content-center">
-                                    <div class="col-lg-6">
-                                        <h5 class="text-secondary mb-1 d-inline-block">Personas</h5>
-                                        <div class="divider-custom">
-                                            <div class="divider-custom-line"></div>
-                                        </div>
-                                        <p class="mb-5 lead">Based on the interview we managed to create tow personas for our users.</p>
+                                    <h5 class="text-secondary mb-1 d-inline-block">Personas</h5>
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
                                     </div>
+                                    <p class="mb-5 lead">Based on the interview we managed to create tow personas for our users.</p>
                                 </div>
 
                                 <div class="row justify-content-center">
@@ -935,7 +929,7 @@
                                             <img class="mb-5 pre-wrap lead" src="assets/img/milestones/milestone-4/wireframe-update-map.jpg" style="width: 530px; height: 520px;">
                                         </a>
                                         <blockquote class="text-muted text-center">
-                                            <p class="mb-0">The friends page became the first page displayed in the menu, because we have discovered that the social interaction aspect is one of the main selling points.</p>
+                                            <p class="mb-0">We've added dog/animal parks as important nearby features, where our users (and pets) can socialize (represented by the tree icon).</p>
                                         </blockquote>
                                     </div>
 
@@ -948,7 +942,7 @@
                                             <img class="mb-5 pre-wrap lead" src="assets/img/milestones/milestone-4/wireframe-update-posting.jpg" style="width: 530px; height: 520px;">
                                         </a>
                                         <blockquote class="text-muted text-center">
-                                            <p class="mb-0">The friends page became the first page displayed in the menu, because we have discovered that the social interaction aspect is one of the main selling points.</p>
+                                            <p class="mb-0">When posting something, you now have the option of tagging your post as a public question, so that it becomes visible to users other than your friends and so that it can be listed as an answer when someone searches a related question.</p>
                                         </blockquote>
                                     </div>
                                 </div>
