--- a/index.html
+++ b/index.html
@@ -150,6 +150,28 @@
                             </div><img class="img-fluid" src="assets/img/milestones/Milestone-6.jpg" alt="M6"/>
                         </div>
                     </div>
+
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="text-center">
+                            <h4 class="text-secondary mb-1 d-inline-block">Milestone Seven</h4>
+                        </div>
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#milestonesModal7">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div><img class="img-fluid" src="assets/img/milestones/Milestone-7.jpg" alt="M7"/>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="text-center">
+                            <h4 class="text-secondary mb-1 d-inline-block">Milestone Eight</h4>
+                        </div>
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#milestonesModal8">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div><img class="img-fluid" src="assets/img/milestones/Milestone-8.jpg" alt="M8"/>
+                        </div>
+                    </div>
                     <!--
                         THIS IS THE TEMPLATE FOR ADDING MILESTONES CLICKABLE ICONS
 
@@ -1532,6 +1554,85 @@
                                     </div> 
                                     <p class="mb-5 pre-wrap lead ml-1 mr-1">Considering all of these predictions regarding the development of Artio in the near future, we can see that the business is likely to gain all of the traction it needs in order to stay profitable. Moreover, it is likely to provide us with more than enough disposable capital to allow us to further develop the app by adding a number of features we are very excited for.</p>
 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="portfolio-modal modal fade" id="milestonesModal7" tabindex="-1" role="dialog" aria-labelledby="#milestonesModal0Label" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
+                    <div class="modal-body text-center">
+                        <div class="container-fluid">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Milestone Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary mb-0">MVP</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Milestone Modal - Image--><img class="img-fluid rounded mb-5 w-50 h-50" src="assets/img/milestones/Milestone-7.jpg" alt="M5"/>
+                                    <!-- Milestone Modal - Text-->
+
+                                </div>
+
+                                <div class="row justify-content-center">
+                                    <p class="mb-5 pre-wrap lead">Our MVP is an early prototype of our vision for the Artio pet network. Check it <a href="http://4droid.go.ro:4200/" target="_blank">here</a> !</p>
+                                </div>
+
+                                <div class="row justify-content-center">
+                                    <h5 class="text-secondary mb-1 d-inline-block">Profile</h5>
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <p class="mb-5 pre-wrap lead" style="margin: 15px">As a result of our previous validation work we decided to concentrate on the social aspects. A person can create a profile on artio with a custom username, add a profile picture and a description about himself/herself and the love for pets. From the profile page the user has the option to post content with images embedded. The post will also appear in the Explore page for any user in the network.</p>
+                                </div>
+
+                                <div class="row justify-content-center">
+                                    <a href="assets/img/milestones/milestone-7/personal.png" target="_blank">
+                                        <img class="mb-5 pre-wrap lead" src="assets/img/milestones/milestone-7/personal.png" style="width: 92%; height: 520px;">
+                                    </a>
+                                </div>
+
+                                <div class="row justify-content-center">
+                                    <h5 class="text-secondary mb-1 d-inline-block">Business Page</h5>
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <p class="mb-5 pre-wrap lead" style="margin: 15px">The second feature we wanted to add is pet centered services with an option to give reviews. As seen in our previous results, people choose a service based on feedback from their friends so we wanted to give them an easy option to give feedbak and have it there for anyone to see. Therefore we have business pages to three services where any Artio user can leave his review.</p>
+                                </div>
+
+                                <div class="row justify-content-center">
+                                    <a href="assets/img/milestones/milestone-7/business-page.png" target="_blank">
+                                        <img class="mb-5 pre-wrap lead" src="assets/img/milestones/milestone-7/business-page.png" style="width: 92%; height: 520px;">
+                                    </a>
+                                </div>
+
+                                <div class="row justify-content-center">
+                                    <h5 class="text-secondary mb-1 d-inline-block">Explore</h5>
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <p class="mb-5 pre-wrap lead" style="margin: 15px">Because we wanted the community to easily discover what friends and other pet lovers post and their reviews for various services we created an Explore page where the user can scroll over those community texts.</p>
+                                </div>
+
+                                <div class="row justify-content-center">
+                                    <a href="assets/img/milestones/milestone-7/explore-1.png" target="_blank">
+                                        <img class="mb-5 pre-wrap lead" src="assets/img/milestones/milestone-7/explore-1.png" style="width: 92%; height: 520px;">
+                                    </a>
+                                </div>
+                                <div class="row justify-content-center">
+                                    <a href="assets/img/milestones/milestone-7/explore-2.png" target="_blank">
+                                        <img class="mb-5 pre-wrap lead" src="assets/img/milestones/milestone-7/explore-2.png" style="width: 92%; height: 520px;">
+                                    </a>
                                 </div>
                             </div>
                         </div>
